The JS is now working for base case Scenarios it doesn't accomodate special cases but we will work on that

--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ body {
     height: 96px;
     background-color:#808080;
     margin: 12px;
+    font-size: 64px;
+    display: flex;
+    align-items:flex-end;
+    justify-content: flex-end;
 }
 
 .btn-content {
