--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 .container{
     width: 400px;
-    padding: 16px 0px;
+    padding: 32px 2px;
     border-radius: 10px;
     margin: auto;
     margin-top: 64px;
@@ -55,7 +55,7 @@ body {
     font-size: 0.6em;
 }
 
-.opr:hover{
+.opr:hover, .per:hover{
     background-color: #ff8c00 ;
     color: white;
 }
