--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     margin-top: 64px;
     background-color: #424242;
     box-shadow: 0px 0px 12px 4px rgba(0,0,0,0.4);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .content{
@@ -23,6 +27,7 @@ body {
 
 .display {
     height: 96px;
+    width: 90%;
     background-color:#808080;
     margin: 12px;
     font-size: 64px;
@@ -72,4 +77,14 @@ body {
 
 .num:hover {
     background-color: yellow;
+}
+
+a, p{
+    color: white;
+    text-decoration: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+a:hover {
+    color: lightblue;
 }
